# mcp-filesystem-gitignore

./: .env.example  .gitignore  CHANGELOG.md  README.md  claude_desktop_config_example.json  instalar.bat  make.bat  pyproject.toml  quick_start.bat  requirements-dev.txt  requirements.txt  verificar_refactor.bat
mcp_filesystem/: __init__.py  __main__.py  config.py  errors.py  filesystem_operations.py  filesystem_service.py  ignore_manager.py  models.py  path_validator.py  server.py
tests/: __init__.py  conftest.py  test_ignore_manager.py  test_path_validator.py
tests/integration/: test_filesystem_service.py  test_special_chars.py
tests/unit/: test_filesystem_operations.py
